[package]
name = "pyhyperminhash"
version = "0.1.5"
edition = "2024"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
repository = "https://github.com/lukaslueg/pyhyperminhash"
description = "Fast, constant-memory cardinality approximation"
readme = "README.md"
license = "MIT"

[lib]
name = "pyhyperminhash"
crate-type = ["cdylib"]

[dependencies]
hyperminhash = "0.2.1"
pyo3 = { version = "0.27", default-features = false, features = ["abi3", "abi3-py39", "extension-module", "macros"] }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
