[package]
name = "pyhyperminhash"
version = "0.1.6"
edition = "2024"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
repository = "https://github.com/lukaslueg/pyhyperminhash"
description = "Fast, constant-memory cardinality approximation"
readme = "README.md"
license = "MIT"
publish = false

[lib]
name = "pyhyperminhash"
crate-type = ["cdylib"]

[dependencies]
hyperminhash = "0.2.2"
pyo3 = { version = "0.27", default-features = false, features = ["extension-module", "macros"] }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }

[features]
default = ["abi3", "abi3-py39"]
abi3 = ["pyo3/abi3"]
abi3-py39 = ["pyo3/abi3-py39"]
abi3-py310 = ["pyo3/abi3-py310"]
abi3-py311 = ["pyo3/abi3-py311"]
abi3-py312 = ["pyo3/abi3-py312"]
abi3-py313 = ["pyo3/abi3-py313"]
abi3-py314 = ["pyo3/abi3-py314"]
