[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyhyperminhash"
description = "Very fast, constant memory-footprint cardinality approximation, including intersection"
authors = [
	{ name="Lukas Lueg", email="lukas.lueg@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8, < 3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/lukaslueg/pyhyperminhash"

[tool.maturin]
features = ["pyo3/extension-module"]
